# stepminia

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
songs/Checkpoint/: Checkpoint.sm
songs/Lesson by DJ/: Lesson by DJ.sm  Lesson by DJ.sm.old  Lesson by DJ.ssc  Lesson by DJ.ssc.old
songs/first/: """simfile""".sm
src/: CMakeLists.txt  all_includes.h  all_includes.hpp  includes.h
src/data_structures/: CMakeLists.txt  note_data.hpp
src/header/: CMakeLists.txt  base_screenstate.h  menu.h  playfield.h
src/impl/: menu.cpp  playfield.cpp
src/main_game_loop/: CMakeLists.txt  draw_screen.cpp  keypresses.cpp  main.cpp  main_loop.cpp  receptor_blinking.cpp  receptor_loop_logic.cpp  receptor_setup.cpp  receptors.cpp  textures.cpp  window_setup.cpp
src/ui_classes/: CMakeLists.txt  base_screenstate.hpp  base_ui_class.hpp  constants.hpp  menu.cpp  menu.hpp  playfield.cpp  playfield.hpp
src/utils/: CMakeLists.txt  notedata.cpp  notedata.hpp  parser.hpp
